# vtutils

./: .gitignore  Makefile.am  README.md  configure.ac  makedist.sh  toutf8.c  vtsize.c  vtutils.h
man/: toutf8.1  vtquery.1  vtshowkeys.1  vtsize.1  vttitle.1
src/: toutf8.c  unicodedata.cpp  vtcap.cpp  vtquery.cpp  vtshowkeys.cpp  vtsize.c  vtstack.cpp  vttitle.cpp  vtutils.h
src/musl/: wcwidth.cpp  wcwidth_musl.h
