AC_INIT([vtutils], [0.4], [fredrik@fornwall.net], [vtutils], [https://github.com/fornwall/vtutils])
AC_PREREQ([2.59])
# foreign avoids "GNU-style NEWS README AUTHORS ChangeLog" files:
AM_INIT_AUTOMAKE([1.10 no-define foreign subdir-objects])
AC_CONFIG_HEADERS([config.h])
AC_PROG_CC # If we use a C compiler
AC_PROG_CXX # If we use a C++ compiler
AC_CONFIG_FILES([Makefile])
AC_OUTPUT

